name:                demo
version:             0.1
synopsis:            demo
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/
  exposed-modules:
    Demo
  build-depends:
                base,
                ghcjs-base,
                text
  default-language: Haskell2010
