name:                demo
version:             0.1
synopsis:            Miso A-Frame demo.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable demo
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
    base,
    ghcjs-base,
    aeson,
    miso-aframe,
    miso
  default-language:    Haskell2010
